// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FooterContainer renders 1`] = `
.c0 {
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  border-top: 1px solid black;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 40px;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin: 100px 93px 53px 93px;
}

@media (max-width:768px) {
  .c0 {
    margin: 100px 55px 53px 55px;
  }
}

<div
  className="c0"
/>
`;

exports[`LogoContainer renders 1`] = `
.c0 {
  background-image: url('require(../assets/adrenalin.svg'));
}

<div
  className="c0"
/>
`;

exports[`NavigationItem renders 1`] = `
.c0 {
  color: #000000;
  font-family: Arial,Helvetica Neue,Helvetica,sans-serif;
  font-size: 13px;
  font-weight: regular;
  margin-left: 5px;
}

<div
  className="c0"
/>
`;

exports[`NavigationOptionsContainer renders 1`] = `
.c0 {
  color: #000000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: ArialMT;
  font-size: 13px;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-letter-spacing: 0;
  -moz-letter-spacing: 0;
  -ms-letter-spacing: 0;
  letter-spacing: 0;
  line-height: 14px;
  width: 436px;
}

<div
  className="c0"
/>
`;
